Don't need tao2aiff, keep tao2wav as an example until #3 is done

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SRC_SUBDIRS = libtao include taoparse tao2aiff tao2wav
+SRC_SUBDIRS = libtao include taoparse tao2wav
 SUBDIRS = $(SRC_SUBDIRS) user-scripts doc examples
 
 EXTRA_DIST = TODO \
