--- a/doc/ClassReference/tao.doxy.cnf.in
+++ b/doc/ClassReference/tao.doxy.cnf.in
@@ -115,7 +115,7 @@ FULL_PATH_NAMES = NO
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT            = ../../include ../../libtao ../../taoparse ../../tao2aiff
+INPUT            = ../../include ../../libtao ../../taoparse ../../tao2wav
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard patterns (like *.cpp 
