--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories(
   ${CMAKE_CURRENT_LIST_DIR}/../include
 )
 
+# -lX11 -lXmu -lXi -lGL -lGLU -lpthread -lglut -laudiofile
+
 add_library(${PROJECT_NAME} SHARED
   TaoAccessPoint.cc
   TaoBow.cc
