--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,9 @@ include_directories(
   ${CMAKE_CURRENT_LIST_DIR}/../include
 )
 
+# set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 list(APPEND example_files
   40strings
   accesspoint1
@@ -25,7 +28,7 @@ list(APPEND example_files
   rectangle2
   rectangle
   stop
-  stringt
+  strand
   testt
 )
 
