--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories(
   ${CMAKE_CURRENT_LIST_DIR}/../include
 )
 
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 add_library(${PROJECT_NAME} SHARED
   access_point.cpp
   bow.cpp
