--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,6 +9,11 @@ include_directories(
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 list(APPEND example_files
+  strand
+)
+
+
+list(APPEND example_files_tmp_disable
   40strings
   accesspoint1
   accesspoint2
