Interim checkin for glfw conversion.  A blank gray window appears after a pause (glut was faster, or it is because I'm not using glfw properly)- but then nothing is drawn to the display.  Copy some demo code to draw something simple and disable all the tao drawing.  Also need to get a text drawing solution.  #21

--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -29,4 +29,4 @@ add_library(${PROJECT_NAME} SHARED
   triangle.cpp
 )
 # -lX11 -lXmu -lXi -lGL -lGLU -lpthread -lglut -laudiofile
-target_link_libraries(${PROJECT_NAME} GL GLU glut)
+target_link_libraries(${PROJECT_NAME} GL GLU glfw)
