install the library #5

--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -30,3 +30,8 @@ add_library(${PROJECT_NAME} SHARED
 )
 # -lX11 -lXmu -lXi -lGL -lGLU -lpthread -lglut -laudiofile
 target_link_libraries(${PROJECT_NAME} GL GLU glfw)
+
+install(TARGETS ${PROJECT_NAME}
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/
+  PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+)
