--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -32,10 +32,21 @@ add_library(${PROJECT_NAME} SHARED
 target_link_libraries(${PROJECT_NAME} GL GLU glfw)
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/../include
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/
+  DESTINATION ${CMAKE_INSTALL_PREFIX}
 )
 
 install(TARGETS ${PROJECT_NAME}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/
   PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
+
+include(CMakePackageConfigHelpers)
+
+configure_package_config_file(
+       ../${PROJECT_NAME}-config.cmake.in
+       ${PROJECT_NAME}-config.cmake
+       INSTALL_DESTINATION lib/${PROJECT_NAME}/cmake/
+)       # PATH_VARS ${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME}_INCLUDE_DIRS)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
+        DESTINATION lib/${PROJECT_NAME}/cmake )
