--- a/tao_synth_ros/CMakeLists.txt
+++ b/tao_synth_ros/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(tao_synth REQUIRED)
 
 catkin_package(
   # INCLUDE_DIRS include
-  LIBRARIES tao_synth_ros
+  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS nodelet roscpp sensor_msgs std_msgs
 )
 
@@ -30,24 +30,24 @@ include_directories(
   ${tao_synth_INCLUDE_DIRES}
 )
 
-add_library(tao_synth_ros
+add_executable(${PROJECT_NAME}
   src/tao_synth.cpp
 )
-# add_dependencies(tao_synth_ros ${PROJECT_NAME}_gencfg)
-target_link_libraries(tao_synth_ros ${catkin_LIBRARIES} ${tao_synth_LIBRARIES})
+# add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_gencfg)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${tao_synth_LIBRARIES})
 
 # TODO(lucasw) is this needed?
 if(catkin_EXPORTED_LIBRARIES)
-  add_dependencies(tao_synth_ros ${catkin_EXPORTED_LIBRARIES})
+  add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_LIBRARIES})
 endif()
 
-install(TARGETS tao_synth_ros
+install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
 # install(FILES
-#   nodelet_tao_synth_ros.xml
+#   nodelet_${PROJECT_NAME}.xml
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
