--- a/libtao/CMakeLists.txt
+++ b/libtao/CMakeLists.txt
@@ -10,7 +10,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_library(${PROJECT_NAME} SHARED
   access_point.cpp
   bow.cpp
-  tao.cpp
+  manager.cpp
   cell.cpp
   circle.cpp
   connector.cpp
