Now can apply forces to instruments created in service call.  The rviz visuals look good, but can't hear anything because there needs to be a resonator attached to all the strands- need to be able to specify that in service call. #24  Also running six strings takes about 50% cpu

--- a/tao_synth_ros/CMakeLists.txt
+++ b/tao_synth_ros/CMakeLists.txt
@@ -21,6 +21,10 @@ find_package(tao_synth REQUIRED)
 #   cfg/Delay.cfg
 # )
 
+add_message_files(
+  FILES
+  Force.msg
+)
 
 add_service_files(
   FILES
