Now have outputs (which don't use the tau_synth Outputs at all- maybe those can be deleted) and can specify outputs and strands via one service call.  Next need to be able to clamp a strand now at a specified position via a topic #24

--- a/tao_synth_ros/CMakeLists.txt
+++ b/tao_synth_ros/CMakeLists.txt
@@ -24,11 +24,13 @@ find_package(tao_synth REQUIRED)
 add_message_files(
   FILES
   Force.msg
+  Instrument.msg
+  Output.msg
 )
 
 add_service_files(
   FILES
-  AddInstrument.srv
+  AddAssembly.srv
 )
 
 generate_messages(
