--- a/.github/workflows/ubuntu_20_04.yml
+++ b/.github/workflows/ubuntu_20_04.yml
@@ -36,6 +36,7 @@ jobs:
             sudo apt-get update -qq
             sudo apt-get install dpkg
             sudo apt-get install -y libglfw3-dev
+            sudo apt-get install -y libglu1-mesa-dev
             sudo apt-get install -y libomp-dev
             sudo apt-get install -y ocl-icd-opencl-dev
             sudo apt-get install -y opencl-clhpp-headers
