--- a/tao_synth_ros/package.xml
+++ b/tao_synth_ros/package.xml
@@ -20,6 +20,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_generation</run_depend>
@@ -27,6 +28,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
 
   <export>
     <!-- nodelet plugin="${prefix}/nodelet_tao_synth_ros.xml" /-->
