--- a/tao_synth_ros/package.xml
+++ b/tao_synth_ros/package.xml
@@ -18,6 +18,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>roslint</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
@@ -26,6 +27,7 @@
   <run_depend>message_generation</run_depend>
   <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>roslint</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
