--- a/.github/workflows/ubuntu_18_04.yml
+++ b/.github/workflows/ubuntu_18_04.yml
@@ -37,7 +37,7 @@ jobs:
             sudo apt-get install dpkg
             sudo apt-get install -y libglfw3-dev
             sudo apt-get install -y libglu1-mesa-dev
-            sudo apt-get install -y libomp-dev
+            sudo apt-get install -y libomp-9-dev
             sudo apt-get install -y ocl-icd-opencl-dev
             sudo apt-get install -y opencl-clhpp-headers
             sudo apt-get install -y python-catkin-pkg
